--- a/templates/result.html
+++ b/templates/result.html
@@ -38,7 +38,7 @@
   <footer class="page-footer light-blue lighten-1" style="position: fixed;left: 0;bottom: 0; width: 100%;">
     <div class="footer-copyright light-blue lighten-1">
       <div class=""  style="padding-bottom: 1rem; position: fixed; font-size: 1.2rem; margin-left: 5rem;">
-        <p>&copy; Rashed</p>
+        <p>&copy; Tanaji</p>
         <p>blabla</p>
       </div>
     </div>
